--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.example.final_project_board_app">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -17,7 +16,7 @@
             android:name=".VideoPlayer"
             android:exported="false"/>
         <activity android:name=".TrickValidation"
-            android:exported="false"/>
+            android:exported="true">
             android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
